# scr1

CodeMaster/: debug_main.py  main.py  pyproject.toml  replit.md  simple_main.py  test_gui.py  working_main.py
CodeMaster/assets/: icons.py
CodeMaster/attached_assets/: debug_allo_1124218_search_1753010621355.html  debug_comfy_3275057_search_1753010621355.html  debug_epicentr_52249367_search_1753010621356.html  debug_rozetka_510680984_search_1753010612393.html  parser_1753010229409.py
CodeMaster/scraper/: base_scraper.py  cloudscraper_scraper.py  selenium_scraper.py  site_scrapers.py
CodeMaster/ui/: components.py  dialogs.py  main_window.py  themes.py
CodeMaster/utils/: config.py  export.py  logger.py
